--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,23 @@
     <title>Webpack Starter Kit</title>
   </head>
   <body>
-    <h1>Webpack Starter Kit</h1>
+    <div class="splash-container">
+      <img src="./images/tron-grid-green-gif.gif">
+      
+      <form>
+        <input>
+        <button> </button>
+        <input>
+        <button></button>
+        <input>
+        <button></button>
+      </form>
+    </div>
+
+
+
+
+    <h1>Jeopardy</h1>
 
     <img src="./images/turing-logo.png" alt="turing logo" height="100px" width="100px">
 
