--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
   <head>
     <title>Webpack Starter Kit</title>
+    <link href="https://fonts.googleapis.com/css?family=Orbitron:500,900&display=swap" rel="stylesheet"> 
   </head>
   <body>
     <div class="splash-container">
