--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <div class="splash-container">
       <header class="splash-header"> <h1 class="title"> Jeopardy </h1>
       </header>
-      <img src="../images/tron-grid-green-gif.gif" class="moving-grid">
+      <img src="../images/splash.gif" class="moving-grid">
       <form class="intake-form">
         <div class="intake-form-inputs">
         <label class ="player-one-label"> Player One 
@@ -28,7 +28,7 @@
 
     
 
-    <div class="round-one-background">
+    <div class="round-one">
       <div class="player-one-stand">
         
       </div>
