--- a/src/index.html
+++ b/src/index.html
@@ -11,16 +11,16 @@
       <img src="../images/splash.gif" class="moving-grid">
       <form class="intake-form">
         <div class="intake-form-inputs">
-        <label class ="player-one-label"> Player One 
+        <label class ="player-one-label" id="player-intake"> Player One 
         <input class="player-one-intake" placeholder="Player One Name" type="text">
         </label>
-        <label class ="player-two-label"> Player Two 
+        <label class ="player-two-label" id="player-intake"> Player Two 
         <input class="player-two-intake" placeholder="Player Two Name" type="text">
       </label>
-      <label class ="player-three-label"> Player Three 
+      <label class ="player-three-label" id="player-intake"> Player Three 
         <input class="player-three-intake" placeholder="Player Three Name" type="text">
       </label>
-        <button class="start-game-btn">Start Game</button>
+        <button class="start-game-btn" disabled>Start Game</button>
       </div>
       </form>
     </div>
