Add grid to dom and set up frame of method for appending

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
     
 
     <div class="round-one" hidden>
+      <div class="round-one-foreground"> 
         <div class="grid-container">
             <div class="grid-item">1</div>
             <div class="grid-item">2</div>
@@ -58,6 +59,7 @@
       </div>
       <div class="player-three-stand">
 
+      </div>
       </div>
     </div>
 
