--- a/src/index.html
+++ b/src/index.html
@@ -30,34 +30,31 @@
     <div class="round-one" hidden>
       <div class="round-one-foreground"> 
         <div class="grid-container">
-            <div class="grid-item">1</div>
-            <div class="grid-item">2</div>
-            <div class="grid-item">3</div>
-            <div class="grid-item">4</div>
-            <div class="grid-item">5</div>
-            <div class="grid-item">6</div>
-            <div class="grid-item">7</div>
-            <div class="grid-item">8</div>
-            <div class="grid-item">9</div>
-            <div class="grid-item">10</div>
-            <div class="grid-item">11</div>
-            <div class="grid-item">12</div>
-            <div class="grid-item">13</div>
-            <div class="grid-item">14</div>
-            <div class="grid-item">15</div>
-            <div class="grid-item">16</div>
-            <div class="grid-item">17</div>
-            <div class="grid-item">18</div>
-            <div class="grid-item">19</div>
-            <div class="grid-item">20</div>
-        </div>
-      <div class="player-one-stand">
-        
-      </div>
-      <div class="player-two-stand">
-
-      </div>
-      <div class="player-three-stand">
+            <div class="grid-item category"></div>
+            <div class="grid-item category"></div>
+            <div class="grid-item category"></div>
+            <div class="grid-item category"></div>
+            <!-- pos use insertadjhtml for items below -->
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"><div>
+        </div>     <div class="player-one-stand">
+             </div>
+      <d class="player-two-stand">
+     </div>    <div class="player-three-stand">
 
       </div>
       </div>
