Adds styling to page and pop-up card

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,6 @@
             <div class="grid-item category"></div>
             <div class="grid-item category"></div>
             <div class="grid-item category"></div>
-            <!-- pos use insertadjhtml for items below -->
             <div class="grid-item"></div>
             <div class="grid-item"></div>
             <div class="grid-item"></div>
@@ -50,12 +49,22 @@
             <div class="grid-item"></div>
             <div class="grid-item"></div>
             <div class="grid-item"></div>
-            <div class="grid-item"><div>
-        </div>     <div class="player-one-stand">
-             </div>
-      <d class="player-two-stand">
-     </div>    <div class="player-three-stand">
-
+            <div class="grid-item"></div>
+        </div>  
+        <!-- <div id="popup-clue"></div> -->
+        <div class="player-container">
+        <div class="player-one-stand podium">
+          <p class="PP1-name name"></p>
+          <p  class="PP1-score score"></p>
+        </div>
+      <div class="player-two-stand podium">
+        <p class="PP2-name name"></p>
+        <p class="PP2-score score"></p>
+      </div>    
+      <div class="player-three-stand podium">
+        <p class="PP3-name name"></p>
+        <p class="PP3-score score"></p>
+      </div>
       </div>
       </div>
     </div>
