--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,6 @@
     </div>
 
     
-
     <div class="round-one" hidden>
       <div class="round-one-foreground"> 
         <div class="grid-container">
@@ -51,25 +50,51 @@
             <div class="grid-item"></div>
             <div class="grid-item"></div>
         </div>  
-        <!-- <div id="popup-clue"></div> -->
-        <div class="player-container">
-        <div class="player-one-stand podium">
-          <p class="PP1-name name"><span class="PP1-name"></span></p>
-          <p  class="PP1-score score"></p>
-        </div>
-      <div class="player-two-stand podium">
-        <p class="PP2-name name"></p>
-        <p class="PP2-score score"></p>
-      </div>    
-      <div class="player-three-stand podium">
-        <p class="PP3-name name"></p>
-        <p class="PP3-score score"></p>
       </div>
-      </div>
+    </div>
+    <div class="round-two" style="display:none">
+      <div class="round-one-foreground"> 
+        <div class="grid-container">
+            <div class="grid-item category"></div>
+            <div class="grid-item category"></div>
+            <div class="grid-item category"></div>
+            <div class="grid-item category"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+        </div>  
       </div>
     </div>
 
     <div class="pop-up-clue" hidden></div>
+
+    <div class="player-container">
+      <div class="player-one-stand podium">
+        <p class="PP1-name name"><span class="PP1-name"></span></p>
+        <p  class="PP1-score score"></p>
+      </div>
+    <div class="player-two-stand podium">
+      <p class="PP2-name name"></p>
+      <p class="PP2-score score"></p>
+    </div>    
+    <div class="player-three-stand podium">
+      <p class="PP3-name name"></p>
+      <p class="PP3-score score"></p>
+    </div>
+    </div>
 
     
 
