Fix bug merge with html

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,32 @@
             <div class="grid-item"></div>
             <div class="grid-item"></div>
         </div>  
-        <!-- <div id="popup-clue"></div> -->
+      </div>
+    </div>
+    <div class="round-two" style="display:none">
+      <div class="round-one-foreground"> 
+        <div class="grid-container">
+            <div class="grid-item category"></div>
+            <div class="grid-item category"></div>
+            <div class="grid-item category"></div>
+            <div class="grid-item category"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+        </div>  
       </div>
     </div>
     
