--- a/src/index.html
+++ b/src/index.html
@@ -57,14 +57,17 @@
     
     <div class="player-container" style="display: none">
       <div class="player-one-stand podium">
+        <img src="./images/player-1-avatar.png" class="avatar a-side" >
         <p class="PP1-name name"><span class="PP1-name"></span></p>
         <p  class="PP1-score score"></p>
       </div>
       <div class="player-two-stand podium">
+        <img src="./images/player-2-avatar.png" class="avatar a-middle" >
         <p class="PP2-name name"></p>
         <p class="PP2-score score"></p>
-      </div>    
+      </div>   
       <div class="player-three-stand podium">
+        <img src="./images/player-3-avatar.png" class="avatar a-side">
         <p class="PP3-name name"></p>
         <p class="PP3-score score"></p>
       </div>
