Add some functionality to get the wage check started

--- a/src/index.html
+++ b/src/index.html
@@ -77,6 +77,8 @@
         </div>  
       </div>
     </div>
+
+    <div class="round-three" style="display:none"></div>
     
     <div class="pop-up-clue" hidden></div>
     
